Bug 155338 - Zooming out on right-hand screen is irreversible
Summary: Zooming out on right-hand screen is irreversible
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: multiscreen (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-09 16:01 UTC by Mike
Modified: 2008-02-13 04:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
trying to explain with pictures :) (309.08 KB, image/png)
2008-01-09 16:03 UTC, Mike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike 2008-01-09 16:01:15 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

I have 2 screens using nvidia twinview.

If I zoom out on the right hand screen using the toolbox zoom out button then the desktop shows all of my left screen zoomed out, but the right cannot be restored because the toolbox is not visible.

This screenshot probably helps but I expect it is easy to reproduce.  The shot is taken on the right hand monitor and extends to the far right.
Comment 1 Mike 2008-01-09 16:03:43 UTC
Created attachment 22918 [details]
trying to explain with pictures :)

Attached is a screenshot.

P.S. I think something is wrong with the bug tracker, I searched plasma and it
came up with multi screen issues which I selected.  It should be putting this
into plasma now rather than kicker.  I think this happened before.
Comment 2 Aaron J. Seigo 2008-02-13 04:12:45 UTC
SVN commit 774354 by aseigo:

* allow dragging around the scene for other desktop containments
* ensure that the zoomed out containment is visible

BUG:155338


 M  +14 -2     desktopview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=774354