* allow dragging around the scene for other desktop containments * ensure that the zoomed out containment is visible

BUG:155338

svn path=/trunk/KDE/kdebase/workspace/; revision=774354